--- a/libs/asio/daytimeUDP/Makefile
+++ b/libs/asio/daytimeUDP/Makefile
@@ -1,4 +1,7 @@
-all: client
+all: client server
 
 client:
 	g++ -o client client.cpp -lboost_system -lpthread
+
+server:
+	g++ -o server server.cpp -lboost_system -lpthread
